[metadata]
# replace with your username:
name = simple-gui-tlm
version = 0.0.1
author = Thyago M.
author_email = thyagomota@gmail.com
description = A small example to illustrate how to package an app in python. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thyagomota/simple-gui
project_urls =
    Bug Tracker = https://github.com/thyagomota/simple-gui/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src